examples/test/testpolicy1804.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1804
  namespace: namespace465
spec:
  podSelector:
    matchLabels:
      key7: value25
      key15: value17
      key38: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key15: value14
          key40: value28
      podSelector:
        matchLabels:
          key21: value39
          key32: value3
          key17: value41
